--- a/00-autorun/demo.html
+++ b/00-autorun/demo.html
@@ -3,4 +3,4 @@
 <script src="https://npmcdn.com/mobx-react@3.2.0"></script>
 <script src="https://rawgit.com/mattruby/mobx-examples/master/logging-utils.js"></script>
 
-<div id="demo"><p>Open your console. Then your ]v[ind.</p></div>
+<div id="react-log"><p>Open your console. Then your ]v[ind.</p></div>
