--- a/00-autorun/demo.html
+++ b/00-autorun/demo.html
@@ -1,6 +1,6 @@
-<script src="https://cdn.jsdelivr.net/g/react@15.0.2(react.min.js+react-dom.min.js),lodash@4.12.0"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.1.0(react.min.js+react-dom.min.js),lodash@4.13.1"></script>
 <script src="https://npmcdn.com/mobx@2.2.0-beta.1/lib/mobx.umd.js"></script>
 <script src="https://npmcdn.com/mobx-react@3.2.0"></script>
 <script src="https://rawgit.com/mattruby/mobx-examples/master/logging-utils.js"></script>
 
-<div id="react-log"><p>Open your console. Then your ]v[ind.</p></div>
+<div id="react-log"></div>
