--- a/00-autorun/demo.html
+++ b/00-autorun/demo.html
@@ -2,5 +2,6 @@
 <script src="https://npmcdn.com/mobx@2.2.0-beta.1/lib/mobx.umd.js"></script>
 <script src="https://npmcdn.com/mobx-react@3.2.0"></script>
 <script src="https://rawgit.com/mattruby/mobx-examples/master/logging-utils.js"></script>
+<!--<script src="../logging-utils.js"></script>-->
 
 <div id="react-log"></div>
