Trying to fix up the fiddle integration

--- a/10-computed/demo.html
+++ b/10-computed/demo.html
@@ -7,8 +7,10 @@
 <script src="https://npmcdn.com/mobx@2.2.0-beta.1/lib/mobx.umd.js"></script>
 <script src="https://npmcdn.com/mobx-react@3.2.0"></script>
 <script src="https://rawgit.com/mattruby/mobx-examples/master/logging-utils.js"></script>
+<!--<script src="../logging-utils.js"></script>-->
 <script>
 	wrapConsole();
 </script>
+<script src="demo.js"></script>
 
 
