--- a/10-computed/index.html
+++ b/10-computed/index.html
@@ -8,8 +8,8 @@
 
 Look at your console
 
-<script src="https://cdn.jsdelivr.net/g/lodash@4.12.0"></script>
-<script src="https://npmcdn.com/mobx@2.2.0-beta.1/lib/mobx.umd.js"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.1.0(react.js+react-dom.js),lodash@4.13.1"></script>
+<script src="https://npmcdn.com/mobx@2.2.2/lib/mobx.umd.min.js"></script>
 
 <script src="demo.js"></script>
 
