--- a/react-examples/00-todo/index.html
+++ b/react-examples/00-todo/index.html
@@ -9,8 +9,8 @@
 <div id="mount"></div>
 
 <script src="https://cdn.jsdelivr.net/g/react@15.1.0(react.min.js+react-dom.min.js),lodash@4.13.1"></script>
-<script src="https://npmcdn.com/mobx@2.2.0/lib/mobx.umd.min.js"></script>
-<script src="https://npmcdn.com/mobx-react@3.3.0"></script>
+<script src="https://npmcdn.com/mobx@2.2.2/lib/mobx.umd.min.js"></script>
+<script src="https://npmcdn.com/mobx-react"></script>
 <script src="https://npmcdn.com/mobx-react-devtools"></script>
 
 <script src="demo.js"></script>
