--- a/10-computed/demo.html
+++ b/10-computed/demo.html
@@ -2,7 +2,7 @@
 
 <script src="https://cdn.jsdelivr.net/g/react@15.1.0(react.min.js+react-dom.min.js),lodash@4.13.1"></script>
 <script src="https://npmcdn.com/mobx@2.2.2/lib/mobx.umd.min.js"></script>
-<script src="https://npmcdn.com/mobx-react@3.2.0"></script>
+<script src="https://npmcdn.com/mobx-react"></script>
 <script src="https://rawgit.com/mattruby/mobx-examples/master/logging-utils.js"></script>
 <!--<script src="../logging-utils.js"></script>-->
 <script>
