Added a spy example and reworked the readme

--- a/80-spy/demo.html
+++ b/80-spy/demo.html
@@ -1,9 +1,13 @@
-<div id="mount"></div>
+<h1>Open up your console to see the spy data coming through.</h1>
 
 <div id="react-log"></div>
 
 <script src="https://cdn.jsdelivr.net/g/react@15.1.0(react.min.js+react-dom.min.js),lodash@4.13.1"></script>
 <script src="https://npmcdn.com/mobx@2.2.2/lib/mobx.umd.min.js"></script>
 <script src="https://npmcdn.com/mobx-react"></script>
-<script src="https://npmcdn.com/mobx-react-devtools"></script>
+<script src="https://rawgit.com/mattruby/mobx-examples/master/logging-utils.js"></script>
+<script>
+	wrapConsole();
+</script>
+
 
