Added an observable example

--- a/35-observable/index.html
+++ b/35-observable/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>]v[ mobx extendObservable example</title>
+	<title>]v[ mobx observable example</title>
 </head>
 <body>
 
