Fixed up the title

--- a/mobx-standalone/50-action/index.html
+++ b/mobx-standalone/50-action/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>]v[ mobx transaction example</title>
+	<title>]v[ mobx action example</title>
 </head>
 <body>
 
