--- a/react-examples/00-todo/demo.html
+++ b/react-examples/00-todo/demo.html
@@ -2,5 +2,5 @@
 
 <script src="https://cdn.jsdelivr.net/g/react@15.2.1(react.min.js+react-dom.min.js),lodash@4.13.1"></script>
 <script src="https://npmcdn.com/mobx@2.3.5/lib/mobx.umd.min.js"></script>
-<script src="https://npmcdn.com/mobx-react"></script>
+<script src="https://npmcdn.com/mobx-react@3.5.0"></script>
 <script src="https://npmcdn.com/mobx-react-devtools"></script>
