--- a/react-examples/30-timer-tutorial/index.html
+++ b/react-examples/30-timer-tutorial/index.html
@@ -8,9 +8,9 @@
 
 <div id="mount"></div>
 
-<script src="https://cdn.jsdelivr.net/g/react@15.1.0(react.js+react-dom.min.js),lodash@4.13.1,momentjs@2.13.0"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.2.1(react.min.js+react-dom.min.js),lodash@4.13.1,momentjs@2.13.0"></script>
 <script src="https://npmcdn.com/mobx@2.3.5/lib/mobx.umd.min.js"></script>
-<script src="https://npmcdn.com/mobx-react"></script>
+<script src="https://npmcdn.com/mobx-react@3.5.0"></script>
 <script src="https://npmcdn.com/mobx-react-devtools"></script>
 
 <script src="demo.js"></script>
