Upgraded mobx to 2.4 Added a new Redux devtools example

--- a/react-examples/40-todo-Redux-devtools/demo.html
+++ b/react-examples/40-todo-Redux-devtools/demo.html
@@ -3,7 +3,7 @@
 <p>Be sure to checkout: https://github.com/zalmoxisus/mobx-remotedev for instructions on how to make use of the Redux tooling.</p>
 
 <script src="https://cdn.jsdelivr.net/g/react@15.2.1(react.min.js+react-dom.min.js),lodash@4.13.1"></script>
-<script src="https://npmcdn.com/mobx@2.3.7/lib/mobx.umd.min.js"></script>
+<script src="https://npmcdn.com/mobx@2.4.0/lib/mobx.umd.min.js"></script>
 <script src="https://npmcdn.com/mobx-react@3.5.1"></script>
 <script src="https://npmcdn.com/mobx-react-devtools"></script>
-<script src="https://npmcdn.com/mobx-remotedev@0.0.2-alpha-3/dist/mobx-remotedev.js"></script>
+<script src="https://npmcdn.com/mobx-remotedev@0.0.2/dist/mobx-remotedev.js"></script>
