--- a/react-examples/50-poker-timer/index.html
+++ b/react-examples/50-poker-timer/index.html
@@ -3,49 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>]v[ mobx timer example</title>
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 	<link rel="stylesheet" href="demo.css">
 </head>
 <body>
-
-<div class="poker-timer">
-	<div class="active-blind">
-		<div class="active-blind-timer">
-			<div class="minutes">
-				10
-			</div>
-			<div class="divider">:</div>
-			<div class="seconds">
-				30
-			</div>
-		</div>
-		<div class="progress-bar-container">
-			<div class="progress-bar"></div>
-		</div>
-		<div class="blind-counts">
-			<div class="big-blind"></div>
-			<div class="small-blind"></div>
-		</div>
-	</div>
-	<div class="timer-controls">
-		<button>Start</button>
-	</div>
-	<div class="blind-listing">
-		<table>
-			<thead>
-			<tr>
-				<td>Time</td>
-				<td>Big</td>
-				<td>Small</td>
-			</tr>
-			</thead>
-			<tbody>
-			<td>15</td>
-			<td>10</td>
-			<td>20</td>
-			</tbody>
-		</table>
-	</div>
-</div>
 
 <div id="mount"></div>
 
