--- a/react-examples/50-poker-timer/index.html
+++ b/react-examples/50-poker-timer/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>]v[ mobx timer example</title>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/pure/0.6.0/pure-min.css">
 	<link rel="stylesheet" href="demo.css">
 </head>
 <body>
