--- a/react-examples/50-poker-timer/demo.html
+++ b/react-examples/50-poker-timer/demo.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="//cdn.jsdelivr.net/pure/0.6.0/pure-min.css">
 <div id="mount"></div>
 
 <script src="https://cdn.jsdelivr.net/g/react@15.3.0(react.min.js+react-dom.min.js),lodash@4.14.1"></script>
