--- a/react-examples/50-poker-timer/index.html
+++ b/react-examples/50-poker-timer/index.html
@@ -17,5 +17,25 @@
 
 <script src="demo.js"></script>
 
+<pre style="color: red">
+
+         ,,'6''-,.
+        <====,.;;--.
+        _`---===. """==__
+      //""@@-\===\@@@@ ""\\
+     |( @@@  |===|  @@@  ||
+      \\ @@   |===|  @@  //
+        \\ @@ |===|@@@ //
+         \\  |===|  //
+___________\\|===| //_____,----""""""""""-----,_
+  """"---,__`\===`/ _________,---------,____    `,
+             |==||                           `\   \
+            |==| |          pb                 )   |
+           |==| |       _____         ______,--'   '
+           |=|  `----"""     `""""""""         _,-'
+            `=\     __,---"""-------------"""''
+                """"
+</pre>
+
 </body>
 </html>
