--- a/mobx-standalone/80-spy/demo.html
+++ b/mobx-standalone/80-spy/demo.html
@@ -2,6 +2,6 @@
 
 <div id="react-log"></div>
 
-<script src="https://cdn.jsdelivr.net/g/react@15.3.1(react.min.js+react-dom.min.js),lodash@4.15.0"></script>
-<script src="https://unpkg.com/mobx@2.5.1/lib/mobx.umd.min.js"></script>
-<script src="https://unpkg.com/mobx-react@3.5.5"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.4.0-rc.3(react.min.js+react-dom.min.js),lodash@4.16.4"></script>
+<script src="https://unpkg.com/mobx@2.6.0/lib/mobx.umd.min.js"></script>
+<script src="https://unpkg.com/mobx-react@3.5.8/index.js"></script>
