--- a/react-examples/00-todo/index.html
+++ b/react-examples/00-todo/index.html
@@ -8,10 +8,11 @@
 
 <div id="mount"></div>
 
-<script src="https://cdn.jsdelivr.net/g/react@15.3.1(react.min.js+react-dom.min.js),lodash@4.15.0"></script>
-<script src="https://unpkg.com/mobx@2.5.1/lib/mobx.umd.min.js"></script>
-<script src="https://unpkg.com/mobx-react@3.5.5"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.4.0-rc.3(react.min.js+react-dom.min.js),lodash@4.16.4"></script>
+<script src="https://unpkg.com/mobx@2.6.0/lib/mobx.umd.min.js"></script>
+<script src="https://unpkg.com/mobx-react@3.5.8/index.js"></script>
 <script src="https://unpkg.com/mobx-react-devtools"></script>
+<script src="https://unpkg.com/mobx-react-form@1.10.1/umd/index.umd.js"></script>
 
 <script src="demo.js"></script>
 
