--- a/react-examples/30-timer-tutorial/demo.html
+++ b/react-examples/30-timer-tutorial/demo.html
@@ -1,6 +1,6 @@
 <div id="mount"></div>
 
-<script src="https://cdn.jsdelivr.net/g/react@15.3.1(react.min.js+react-dom.min.js),lodash@4.15.0,momentjs@2.14.1"></script>
-<script src="https://unpkg.com/mobx@2.5.1/lib/mobx.umd.min.js"></script>
-<script src="https://unpkg.com/mobx-react@3.5.5"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.4.0-rc.3(react.min.js+react-dom.min.js),lodash@4.16.4,momentjs@2.14.1"></script>
+<script src="https://unpkg.com/mobx@2.6.0/lib/mobx.umd.min.js"></script>
+<script src="https://unpkg.com/mobx-react@3.5.8/index.js"></script>
 <script src="https://unpkg.com/mobx-react-devtools"></script>
