--- a/mobx-standalone/90-whyRun/index.html
+++ b/mobx-standalone/90-whyRun/index.html
@@ -8,8 +8,8 @@
 
 Look at your console
 
-<script src="https://cdn.jsdelivr.net/g/react@15.4.0-rc.3(react.js+react-dom.js),lodash@4.16.4"></script>
-<script src="https://unpkg.com/mobx@2.6.0/lib/mobx.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.4.1(react.js+react-dom.js),lodash@4.17.2"></script>
+<script src="https://unpkg.com/mobx@2.6.3/lib/mobx.umd.min.js"></script>
 
 <script src="demo.js"></script>
 
