--- a/react-examples/10-array-propType/index.html
+++ b/react-examples/10-array-propType/index.html
@@ -8,9 +8,9 @@
 
 <div id="mount"></div>
 
-<script src="https://cdn.jsdelivr.net/g/react@15.4.0-rc.3(react.js+react-dom.js),lodash@4.16.4"></script>
-<script src="https://unpkg.com/mobx@2.6.0/lib/mobx.umd.min.js"></script>
-<script src="https://unpkg.com/mobx-react@3.5.8/index.js"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.4.1(react.js+react-dom.js),lodash@4.17.2"></script>
+<script src="https://unpkg.com/mobx@2.6.3/lib/mobx.umd.min.js"></script>
+<script src="https://unpkg.com/mobx-react@4.0.3/index.js"></script>
 
 <script src="demo.js"></script>
 
