Fixed the timer

--- a/react-examples/60-countdown-timer/demo.html
+++ b/react-examples/60-countdown-timer/demo.html
@@ -1,4 +1,4 @@
-<div id="mount"></div>
+<div id="reactOutput"></div>
 
 <script src="https://cdn.jsdelivr.net/g/react@15.4.1(react.min.js+react-dom.min.js),lodash@4.17.2,momentjs@2.14.1"></script>
 <script src="https://unpkg.com/mobx@2.6.3/lib/mobx.umd.min.js"></script>
