--- a/react-examples/60-countdown-timer/index.html
+++ b/react-examples/60-countdown-timer/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 
-<div id="reactOutput"></div>
+<div id="mount"></div>
 
-<script src="https://cdn.jsdelivr.net/g/react@15.4.1(react.min.js+react-dom.min.js),lodash@4.17.2,momentjs@2.14.1"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.4.1(react.js+react-dom.js),lodash@4.17.2,momentjs@2.14.1"></script>
 <script src="https://unpkg.com/mobx@2.6.3/lib/mobx.umd.min.js"></script>
 <script src="https://unpkg.com/mobx-react@4.0.3/index.js"></script>
 <script src="https://unpkg.com/mobx-react-devtools"></script>
