--- a/react-examples/20-provider/index.html
+++ b/react-examples/20-provider/index.html
@@ -8,9 +8,9 @@
 
 <div id="mount"></div>
 
-<script src="https://cdn.jsdelivr.net/g/react@15.4.0-rc.3(react.js+react-dom.min.js),lodash@4.16.4"></script>
-<script src="https://unpkg.com/mobx@2.6.3/lib/mobx.umd.min.js"></script>
-<script src="https://unpkg.com/mobx-react@4.0.3/index.js"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.4.2(react.min.js+react-dom.min.js),lodash@4.17.4"></script>
+<script src="https://unpkg.com/mobx@3.0.1/lib/mobx.umd.min.js"></script>
+<script src="https://unpkg.com/mobx-react@4.1.0/index.js"></script>
 <script src="https://unpkg.com/mobx-react-devtools"></script>
 
 <script src="demo.js"></script>
